--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+api_mercadoPago.py
+
 # Created by https://www.toptal.com/developers/gitignore/api/django
 # Edit at https://www.toptal.com/developers/gitignore?templates=django
 
